[gd_scene load_steps=31 format=3 uid="uid://co4h6ufwjhb6n"]

[ext_resource type="Texture2D" uid="uid://vg7kif4w0xrg" path="res://assets/ui/logos/twitter.png" id="1"]
[ext_resource type="Material" uid="uid://cir1cbas5byei" path="res://assets/shader/material/erase.tres" id="2"]
[ext_resource type="PackedScene" path="res://src/eastereggs/EasterEggGame.tscn" id="3"]
[ext_resource type="Theme" uid="uid://8v4be764xt8s" path="res://assets/base_theme.tres" id="4"]
[ext_resource type="Texture2D" uid="uid://w2bcgdk824k7" path="res://assets/player/body/body01.png" id="5"]
[ext_resource type="Script" path="res://src/screen/main_screen.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://py4xd4x7cpe5" path="res://assets/player/head/head01.png" id="6_2dao0"]
[ext_resource type="Texture2D" uid="uid://b4a3swdmkov03" path="res://assets/ui/logos/github.png" id="7"]
[ext_resource type="Texture2D" uid="uid://c0cn3wqqbturm" path="res://assets/ui/button/button_spritesheet - Copy.png" id="7_p2ajj"]
[ext_resource type="Texture2D" uid="uid://dddrus2xwce1k" path="res://assets/ui/logos/myket.png" id="7_quwql"]
[ext_resource type="AudioStream" uid="uid://clb13nxm4p246" path="res://assets/sfx/click.wav" id="9"]
[ext_resource type="Texture2D" uid="uid://wieh7rp4iln5" path="res://assets/ui/logos/virasty.png" id="10_jjjun"]
[ext_resource type="Material" uid="uid://do36kvrgmr67n" path="res://assets/shader/material/glitch.tres" id="11"]
[ext_resource type="Script" path="res://src/eastereggs/ee_message.gd" id="12"]
[ext_resource type="PackedScene" uid="uid://ohc7kpbmaw5k" path="res://src/screen/TutorialConfirmation.tscn" id="13"]
[ext_resource type="Environment" uid="uid://cubx17s0fe45p" path="res://src/escape_env.tres" id="15"]
[ext_resource type="PackedScene" uid="uid://d0qowp0dos4dl" path="res://src/eastereggs/EasterEggDialog.tscn" id="16"]
[ext_resource type="PackedScene" uid="uid://xf08d41mo60b" path="res://src/screen/SettingsScreen.tscn" id="17"]
[ext_resource type="PackedScene" uid="uid://bahhgk04l2vbg" path="res://src/screen/CreditsScreen.tscn" id="18"]
[ext_resource type="AudioStream" uid="uid://dgbuy774h2p6a" path="res://assets/sfx/easter_egg.wav" id="19"]

[sub_resource type="CompressedTexture2D" id="1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o6te5"]
texture = ExtResource("7_p2ajj")
texture_margin_left = 22.0
texture_margin_top = 22.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
expand_margin_left = 100.0
expand_margin_top = 50.0
expand_margin_right = 100.0
expand_margin_bottom = 50.0
region_rect = Rect2(0, 0, 64, 64)
modulate_color = Color(1, 1, 1, 0.65098)

[sub_resource type="Animation" id="8"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(1, 0.5, 2),
"update": 0,
"values": [Vector2(0, -110), Vector2(0, 160), Vector2(0, 110)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainButtons/HMenu/Menu/PlayButton:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(1, 0.5, 2),
"update": 0,
"values": [Vector2(-340, 610), Vector2(210, 610), Vector2(160, 526)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainButtons/HMenu/Menu/CustomizeButton:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(1, 0.5, 2),
"update": 0,
"values": [Vector2(720, 722), Vector2(110, 722), Vector2(160, 667)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainButtons/HMenu/Menu/SettingsButton:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(1, 0.5, 2),
"update": 0,
"values": [Vector2(-400, 834), Vector2(210, 834), Vector2(160, 807)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MainButtons/HMenu/Menu/AboutButton:rect_position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 0.5, 2),
"update": 0,
"values": [Vector2(720, 946), Vector2(110, 946), Vector2(160, 946)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BottomButtons/HBoxContainer/virasty:rect_position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 0.5, 2),
"update": 0,
"values": [Vector2(479, 149), Vector2(479, 14), Vector2(479, -38), Vector2(479, 14)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BottomButtons/HBoxContainer/GitHub:rect_position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 0.5, 2),
"update": 0,
"values": [Vector2(329, 159), Vector2(329, 14), Vector2(329, -38), Vector2(329, 14)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BottomButtons/HBoxContainer/Twitter:rect_position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 0.5, 2),
"update": 0,
"values": [Vector2(179, 167), Vector2(179, 14), Vector2(179, -38), Vector2(179, 14)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("BottomButtons/HBoxContainer/Myket:rect_position")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 0.5, 2),
"update": 0,
"values": [Vector2(29, 176), Vector2(29, 14), Vector2(32, -38), Vector2(29, 14)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprites:material:shader_param/progress")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.7, 1.9),
"transitions": PackedFloat32Array(1, 1, 2),
"update": 0,
"values": [1.2, 1.2, 0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Glitch:material:shader_param/apply")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Sprites/EasterEgg:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Sprites/Body:region_rect")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 64, 64)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Sprites/Head:region_rect")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 64, 64)]
}

[sub_resource type="Animation" id="9"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -110)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainButtons/HMenu/Menu/PlayButton:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(160, 526)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainButtons/HMenu/Menu/CustomizeButton:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(160, 667)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainButtons/HMenu/Menu/SettingsButton:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(160, 807)]
}

[sub_resource type="Animation" id="10"]
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glitch:material:shader_param/apply")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EasterEggMessage:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(722, 590), Vector2(722, 590), Vector2(-1120, 590)]
}

[sub_resource type="Animation" id="11"]
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glitch:material:shader_param/apply")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="Animation" id="12"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glitch:material:shader_param/apply")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="13"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 64, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 64, 64)]
}

[sub_resource type="Animation" id="14"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 192, 64, 64), Rect2(64, 192, 64, 64), Rect2(128, 192, 64, 64), Rect2(192, 192, 64, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 192, 64, 64), Rect2(64, 192, 64, 64), Rect2(128, 192, 64, 64), Rect2(192, 192, 64, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2vfdm"]
_data = {
"ENTER": SubResource("8"),
"RESET": SubResource("9"),
"easteregg": SubResource("10"),
"easteregg2": SubResource("11"),
"exit": SubResource("12"),
"reset_sprite": SubResource("13"),
"sprite_unique": SubResource("14")
}

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("4")
script = ExtResource("6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource("1")
expand_mode = 1
stretch_mode = 6

[node name="EasterEggGame" parent="CanvasLayer" instance=ExtResource("3")]

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_top = 634.0
offset_right = 720.0
offset_bottom = 646.0
text = "ESCAPE"

[node name="Sprites" type="Control" parent="."]
material = ExtResource("2")
layout_mode = 2
anchors_preset = 0
offset_right = 38.0
offset_bottom = 1280.0
mouse_filter = 2
theme = ExtResource("4")

[node name="Body" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(128, 158)
scale = Vector2(4, 4)
texture = ExtResource("5")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="Head" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(128, 158)
scale = Vector2(4, 4)
texture = ExtResource("6_2dao0")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="EasterEgg" type="Button" parent="Sprites"]
layout_mode = 2
offset_top = 621.0
offset_right = 38.0
offset_bottom = 659.0
focus_mode = 0
mouse_default_cursor_shape = 2

[node name="MainButtons" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 720.0
offset_bottom = 1280.0

[node name="HMenu" type="VBoxContainer" parent="MainButtons"]
layout_mode = 2
alignment = 1

[node name="Menu" type="VBoxContainer" parent="MainButtons/HMenu"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="PlayButton" type="Button" parent="MainButtons/HMenu/Menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("4")
text = "play"

[node name="CustomizeButton" type="Button" parent="MainButtons/HMenu/Menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("4")
text = "Customize"

[node name="SettingsButton" type="Button" parent="MainButtons/HMenu/Menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("4")
text = "Settings"

[node name="AboutButton" type="Button" parent="MainButtons/HMenu/Menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("4")
text = "About"

[node name="BottomButtons" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 79.0
offset_top = 1091.0
offset_right = 2395.0
offset_bottom = 1667.0
scale = Vector2(0.25, 0.25)

[node name="PanelContainer" type="PanelContainer" parent="BottomButtons"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_o6te5")

[node name="HBoxContainer" type="HBoxContainer" parent="BottomButtons"]
layout_mode = 2

[node name="Myket" type="TextureButton" parent="BottomButtons/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_quwql")

[node name="Twitter" type="TextureButton" parent="BottomButtons/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1")
stretch_mode = 5

[node name="GitHub" type="TextureButton" parent="BottomButtons/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7")

[node name="virasty" type="TextureButton" parent="BottomButtons/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("10_jjjun")
stretch_mode = 6

[node name="Glitch" type="ColorRect" parent="."]
material = ExtResource("11")
layout_mode = 2
offset_right = 720.0
offset_bottom = 1280.0
mouse_filter = 2
theme = ExtResource("4")

[node name="EasterEggMessage" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 817.0
offset_top = 462.0
offset_right = 1537.0
offset_bottom = 1742.0
bbcode_enabled = true
text = "   Escape
     The
OBSTACLES"
scroll_active = false
script = ExtResource("12")

[node name="EasterEggDialog" parent="." instance=ExtResource("16")]
position = Vector2i(0, 40)
visible = false

[node name="TutorialConfirmation" parent="." instance=ExtResource("13")]

[node name="SettingsScreen" parent="." instance=ExtResource("17")]

[node name="AboutScreen" parent="." instance=ExtResource("18")]

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9")
bus = &"SFX"

[node name="EasterEggSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2vfdm")
}
autoplay = "ENTER"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("15")

[connection signal="pressed" from="Sprites/EasterEgg" to="." method="_on_EasterEgg_pressed"]
[connection signal="pressed" from="MainButtons/HMenu/Menu/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainButtons/HMenu/Menu/CustomizeButton" to="." method="_on_CustomizeButton_pressed"]
[connection signal="pressed" from="MainButtons/HMenu/Menu/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MainButtons/HMenu/Menu/AboutButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="BottomButtons/HBoxContainer/Myket" to="." method="_on_Myket_pressed"]
[connection signal="pressed" from="BottomButtons/HBoxContainer/Twitter" to="." method="_on_Twitter_pressed"]
[connection signal="pressed" from="BottomButtons/HBoxContainer/GitHub" to="." method="_on_GitHub_pressed"]
[connection signal="pressed" from="BottomButtons/HBoxContainer/virasty" to="." method="_on_virasty_pressed"]
[connection signal="confirmed" from="TutorialConfirmation" to="." method="_on_TutorialConfirmation_confirmed"]
